Enhanced Test Suite for OrderController
- Thoroughly expanded the `OrderControllerTest` to comprehensively assess the `OrderController`'s capabilities.
- Incorporated a diverse array of tests to scrutinize CRUD functionalities, addressing both success and error conditions.
- Established a `@BeforeEach` setup for initializing necessary components like `OrderDTO`, `Order` entity, and `ModelMapper`.
- Leveraged Mockito for efficient and isolated testing of the controller by mocking `OrderService`.
- Conducted rigorous validations for successful operations such as retrieving, creating, updating, and removing orders, confirming accurate HTTP status codes and JSON structures.
- Implemented detailed tests for handling scenarios where orders are not found, demonstrating the controller's robust error management.
- Created tests for adding and updating orders with invalid input, ensuring the controller correctly responds with BadRequest.
- Executed tests for API endpoints to manage invalid order ID types in fetch and delete operations, validating BadRequest responses.
- Utilized `MockMvc` to simulate HTTP requests and assert expected outcomes, enhancing the reliability of the controller's response handling.

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>modelmapper</artifactId>
             <version>2.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.3</version> <!-- Use the version compatible with your project -->
+        </dependency>
+
 
     </dependencies>
 
